--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,15 +10,12 @@
 			</title>
 		{% endblock %}
 
-		{% block favicons %}
-			<link rel="apple-touch-icon" sizes="180x180" href="assets/images/favicons/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicons/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicons/favicon-16x16.png"/>
-			<link rel="manifest" href="assets/images/favicons/site.webmanifest"/>
+			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
+			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
+			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
 			<meta name="description" content="Roofsie HTML 5 Template "/>
-		{% endblock %}
 
-		{% block font %}
 			<link rel="preconnect" href="https://fonts.googleapis.com">
 
 			<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,66 +23,64 @@
 			<link href="https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
 
-			<link rel="stylesheet" href="assets/vendors/bootstrap/css/bootstrap.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/animate/animate.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/animate/custom-animate.css"/>
-			<link rel="stylesheet" href="assets/vendors/fontawesome/css/all.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/jarallax/jarallax.css"/>
-			<link rel="stylesheet" href="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css"/>
-			<link rel="stylesheet" href="assets/vendors/nouislider/nouislider.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/nouislider/nouislider.pips.css"/>
-			<link rel="stylesheet" href="assets/vendors/odometer/odometer.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/swiper/swiper.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/roofsie-icons/style.css">
-			<link rel="stylesheet" href="assets/vendors/tiny-slider/tiny-slider.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/reey-font/stylesheet.css"/>
-			<link rel="stylesheet" href="assets/vendors/owl-carousel/owl.carousel.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/owl-carousel/owl.theme.default.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/bxslider/jquery.bxslider.css"/>
-			<link rel="stylesheet" href="assets/vendors/bootstrap-select/css/bootstrap-select.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/vegas/vegas.min.css"/>
-			<link rel="stylesheet" href="assets/vendors/jquery-ui/jquery-ui.css"/>
-			<link rel="stylesheet" href="assets/vendors/timepicker/timePicker.css"/>
-		{% endblock %}
+			<link rel="stylesheet" href="/assets/vendors/bootstrap/css/bootstrap.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/animate/animate.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/animate/custom-animate.css"/>
+			<link rel="stylesheet" href="/assets/vendors/fontawesome/css/all.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/jarallax/jarallax.css"/>
+			<link rel="stylesheet" href="/assets/vendors/jquery-magnific-popup/jquery.magnific-popup.css"/>
+			<link rel="stylesheet" href="/assets/vendors/nouislider/nouislider.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/nouislider/nouislider.pips.css"/>
+			<link rel="stylesheet" href="/assets/vendors/odometer/odometer.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/swiper/swiper.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/roofsie-icons/style.css">
+			<link rel="stylesheet" href="/assets/vendors/tiny-slider/tiny-slider.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/reey-font/stylesheet.css"/>
+			<link rel="stylesheet" href="/assets/vendors/owl-carousel/owl.carousel.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/owl-carousel/owl.theme.default.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/bxslider/jquery.bxslider.css"/>
+			<link rel="stylesheet" href="/assets/vendors/bootstrap-select/css/bootstrap-select.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/vegas/vegas.min.css"/>
+			<link rel="stylesheet" href="/assets/vendors/jquery-ui/jquery-ui.css"/>
+			<link rel="stylesheet" href="/assets/vendors/timepicker/timePicker.css"/>
 
-		{% block stylesheets %}
-			<link rel="stylesheet" href="assets/css/roofsie.css"/>
-			<link rel="stylesheet" href="assets/css/roofsie-responsive.css"/>
-		{% endblock %}
+			<link rel="stylesheet" href="/assets/css/roofsie.css"/>
+			<link rel="stylesheet" href="/assets/css/roofsie-responsive.css"/>
+			<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jquery-bar-rating/1.2.2/themes/css-stars.min.css">
 
-		{% block javascripts %}
-			<script src="assets/vendors/jquery/jquery-3.6.0.min.js"></script>
-			<script src="assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
-			<script src="assets/vendors/jarallax/jarallax.min.js"></script>
-			<script src="assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
-			<script src="assets/vendors/jquery-appear/jquery.appear.min.js"></script>
-			<script src="assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
-			<script src="assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
-			<script src="assets/vendors/jquery-validate/jquery.validate.min.js"></script>
-			<script src="assets/vendors/nouislider/nouislider.min.js"></script>
-			<script src="assets/vendors/odometer/odometer.min.js"></script>
-			<script src="assets/vendors/swiper/swiper.min.js"></script>
-			<script src="assets/vendors/tiny-slider/tiny-slider.min.js"></script>
-			<script src="assets/vendors/wnumb/wNumb.min.js"></script>
-			<script src="assets/vendors/wow/wow.js"></script>
-			<script src="assets/vendors/isotope/isotope.js"></script>
-			<script src="assets/vendors/countdown/countdown.min.js"></script>
-			<script src="assets/vendors/owl-carousel/owl.carousel.min.js"></script>
-			<script src="assets/vendors/bxslider/jquery.bxslider.min.js"></script>
-			<script src="assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
-			<script src="assets/vendors/vegas/vegas.min.js"></script>
-			<script src="assets/vendors/jquery-ui/jquery-ui.js"></script>
-			<script src="assets/vendors/timepicker/timePicker.js"></script>
-			<script src="assets/vendors/circleType/jquery.circleType.js"></script>
-			<script src="assets/vendors/circleType/jquery.lettering.min.js"></script>
 
-		{% endblock %}
+			<script src="/assets/vendors/jquery/jquery-3.6.0.min.js"></script>
+			<script src="/assets/vendors/bootstrap/js/bootstrap.bundle.min.js"></script>
+			<script src="/assets/vendors/jarallax/jarallax.min.js"></script>
+			<script src="/assets/vendors/jquery-ajaxchimp/jquery.ajaxchimp.min.js"></script>
+			<script src="/assets/vendors/jquery-appear/jquery.appear.min.js"></script>
+			<script src="/assets/vendors/jquery-circle-progress/jquery.circle-progress.min.js"></script>
+			<script src="/assets/vendors/jquery-magnific-popup/jquery.magnific-popup.min.js"></script>
+			<script src="/assets/vendors/jquery-validate/jquery.validate.min.js"></script>
+			<script src="/assets/vendors/nouislider/nouislider.min.js"></script>
+			<script src="/assets/vendors/odometer/odometer.min.js"></script>
+			<script src="/assets/vendors/swiper/swiper.min.js"></script>
+			<script src="/assets/vendors/tiny-slider/tiny-slider.min.js"></script>
+			<script src="/assets/vendors/wnumb/wNumb.min.js"></script>
+			<script src="/assets/vendors/wow/wow.js"></script>
+			<script src="/assets/vendors/isotope/isotope.js"></script>
+			<script src="/assets/vendors/countdown/countdown.min.js"></script>
+			<script src="/assets/vendors/owl-carousel/owl.carousel.min.js"></script>
+			<script src="/assets/vendors/bxslider/jquery.bxslider.min.js"></script>
+			<script src="/assets/vendors/bootstrap-select/js/bootstrap-select.min.js"></script>
+			<script src="/assets/vendors/vegas/vegas.min.js"></script>
+			<script src="/assets/vendors/jquery-ui/jquery-ui.js"></script>
+			<script src="/assets/vendors/timepicker/timePicker.js"></script>
+			<script src="/assets/vendors/circleType/jquery.circleType.js"></script>
+			<script src="/assets/vendors/circleType/jquery.lettering.min.js"></script>
+			<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-bar-rating/1.2.2/jquery.barrating.min.js"></script>
+
+
 	</head>
 
-	{% block header %}
 	    <div class="page-wrapper">
 		<header class="main-header-three clearfix">
-            <div class="main-header-three-shape" style="background-image: url(assets/images/shapes/main-header-three-shape.png)"></div>
+            <div class="main-header-three-shape" style="background-image: url(/assets/images/shapes/main-header-three-shape.png)"></div>
             <div class="main-header-three__top">
                 <div class="container">
                     <div class="main-header-three__top-inner">
@@ -101,7 +96,7 @@
                     <div class="container">
                         <div class="main-menu-three__wrapper-inner clearfix">
                             <div class="main-menu-three__logo">
-                                <a href="/"><img src="assets/images/resources/marlier4White.png" alt="" style="height: 80px;"></a>
+                                <a href="/"><img src="/assets/images/resources/marlier4White.png" alt="" style="height: 80px;"></a>
                             </div>
                             <div class="main-menu-three__left">
                                 <div class="main-menu-three__main-menu-box">
@@ -134,12 +129,10 @@
                                             </ul>
                                         </li>
                                         <li class="dropdown">
-                                            <a href="#">Blog</a>
+                                            <a href="#">Commentaires</a>
                                             <ul class="border-top-2px">
-                                                <li><a href="#">Blog</a></li>
-                                                <li><a href="#">Blog Carousel</a></li>
-                                                <li><a href="#">Blog Sidebar</a></li>
-                                                <li><a href="#">Blog Details</a></li>
+                                                <li><a href="{{path('app_comm')}}">Tout les commentaires</a></li>
+                                                <li><a href="{{path('comm_create')}}">Laisser un commentaire</a></li>
                                             </ul>
                                         </li>
                                         <li>
@@ -198,9 +191,7 @@
                 </div>
             </div>
         </header>
-	{% endblock %}
 	
-	{% block Mobile %}
 		<div class="mobile-nav__wrapper">
 			<div class="mobile-nav__overlay mobile-nav__toggler"></div>
 			<!-- /.mobile-nav__overlay -->
@@ -210,7 +201,7 @@
 				</span>
 
 				<div class="logo-box">
-					<a href="index.html" aria-label="logo image"><img src="assets/images/resources/logo-3.png" width="143" alt=""/></a>
+					<a href="index.html" aria-label="logo image"><img src="/assets/images/resources/logo-3.png" width="143" alt=""/></a>
 				</div>
 				<!-- /.logo-box -->
 				<div class="mobile-nav__container"></div>
@@ -259,22 +250,23 @@
 			</div>
 			<!-- /.search-popup__content -->
 		</div>
-	{% endblock %}
 
 	<body>
-		{% block body %}{% endblock %}
+		{% block body %}
+		{% endblock %}
+		{% block javascripts %}{% endblock %}
+
 	</body>
 
-	{% block footer %}
 	    <div class="page-wrapper">
 
 		<!--Site Footer Start-->
 		<footer class="site-footer">
 			<div class="site-footer-img-1">
-				<img src="assets/images/resources/site-footer-img-1.png" alt="">
+				<img src="/assets/images/resources/site-footer-img-1.png" alt="">
 			</div>
 			<div class="site-footer-shape-1">
-				<img src="assets/images/shapes/site-footer-shape-1.png" alt="">
+				<img src="/assets/images/shapes/site-footer-shape-1.png" alt="">
 			</div>
 			<div class="container">
 				<div class="site-footer__top">
@@ -371,5 +363,4 @@
 		</footer>
 		</div>
 		<!--Site Footer End-->
-	{% endblock %}
 </html>
