--- a/templates/services/index.html.twig
+++ b/templates/services/index.html.twig
@@ -40,7 +40,7 @@
             <div class="container">
                 <div class="row">
                     <!--Services One Single Start-->
-                    <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="100ms">
+                    {# <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="100ms">
                         <div class="services-one__single">
                             <div class="services-one__img">
                                 <img src="assets/images/services/services-1-1.jpg" alt="">
@@ -56,7 +56,7 @@
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    </div> #}
                     <!--Services One Single End-->
                     <!--Services One Single Start-->
                     <div class="col-xl-4 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="200ms">
