--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -23,19 +23,19 @@
 			<!--Main Slider Start-->
 			<section class="main-slider-three clearfix">
 				<div class="swiper-container thm-swiper__slider" data-swiper-options='{"slidesPerView": 1, "loop": true,
-												                "effect": "fade",
-												                "pagination": {
-												                "el": "#main-slider-pagination",
-												                "type": "bullets",
-												                "clickable": true
-												                },
-												                "navigation": {
-												                "nextEl": "#main-slider__swiper-button-next",
-												                "prevEl": "#main-slider__swiper-button-prev"
-												                },
-												                "autoplay": {
-												                "delay": 5000
-												                }}'>
+																		                "effect": "fade",
+																		                "pagination": {
+																		                "el": "#main-slider-pagination",
+																		                "type": "bullets",
+																		                "clickable": true
+																		                },
+																		                "navigation": {
+																		                "nextEl": "#main-slider__swiper-button-next",
+																		                "prevEl": "#main-slider__swiper-button-prev"
+																		                },
+																		                "autoplay": {
+																		                "delay": 5000
+																		                }}'>
 					<div class="swiper-wrapper">
 
 						<div class="swiper-slide">
@@ -179,7 +179,7 @@
 								</div>
 							</div>
 						</div>
-						
+
 						<div class="col-xl-6">
 							<div class="about-three__right">
 								<div class="section-title text-left">
@@ -203,9 +203,11 @@
 											<i class="fa fa-check"></i>
 										</div>
 										<div class="text">
-											<p><b>Une étude technique préalable à tout démarrage des travaux : </b>faisabilité,
-												chiffrage…L’étude est le meilleur moyen d’éviter les mauvaises surprises avant
-												travaux,</p>
+											<p>
+												<b>Une étude technique préalable à tout démarrage des travaux :
+												</b>faisabilité,
+																								chiffrage…L’étude est le meilleur moyen d’éviter les mauvaises surprises avant
+																								travaux,</p>
 										</div>
 									</li>
 									<li>
@@ -213,8 +215,10 @@
 											<i class="fa fa-check"></i>
 										</div>
 										<div class="text">
-											<p><b>Des projets personnalisés et des idées créatives : </b>conseils, inspiration, créativité…
-												Nous vous accompagnons dans la personnalisation de tous vos projets,</p>
+											<p>
+												<b>Des projets personnalisés et des idées créatives :
+												</b>conseils, inspiration, créativité…
+																								Nous vous accompagnons dans la personnalisation de tous vos projets,</p>
 										</div>
 									</li>
 									<li>
@@ -222,9 +226,11 @@
 											<i class="fa fa-check"></i>
 										</div>
 										<div class="text">
-											<p><b>La sécurité d’un contrat : </b>le prix que nous vous annonçons est ferme et définitif, les
-												délais d’exécution sont convenus à l’avance et nous vous garantissons le bon
-												achèvement des travaux,</p>
+											<p>
+												<b>La sécurité d’un contrat :
+												</b>le prix que nous vous annonçons est ferme et définitif, les
+																								délais d’exécution sont convenus à l’avance et nous vous garantissons le bon
+																								achèvement des travaux,</p>
 										</div>
 									</li>
 									<li>
@@ -232,7 +238,9 @@
 											<i class="fa fa-check"></i>
 										</div>
 										<div class="text">
-											<p><b>Un suivi permanent de votre chantier,</b></p>
+											<p>
+												<b>Un suivi permanent de votre chantier,</b>
+											</p>
 										</div>
 									</li>
 									<li>
@@ -240,7 +248,9 @@
 											<i class="fa fa-check"></i>
 										</div>
 										<div class="text">
-											<p><b>Une réelle expertise dans la gestion de travaux : </b>une équipe de professionnels expérimentés et formés en permanence.</p>
+											<p>
+												<b>Une réelle expertise dans la gestion de travaux :
+												</b>une équipe de professionnels expérimentés et formés en permanence.</p>
 										</div>
 									</li>
 								</ul>
@@ -409,29 +419,29 @@
 					</div>
 					<div
 						class="project-three__carousel owl-carousel owl-theme thm-owl__carousel" data-owl-options='{
-														                    "loop": true,
-														                    "autoplay": true,
-														                    "margin": 30,
-														                    "nav": false,
-														                    "dots": true,
-														                    "smartSpeed": 500,
-														                    "autoplayTimeout": 10000,
-														                    "navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
-														                    "responsive": {
-														                        "0": {
-														                            "items": 1
-														                        },
-														                        "768": {
-														                            "items": 2
-														                        },
-														                        "992": {
-														                            "items": 2
-														                        },
-														                        "1200": {
-														                            "items": 2
-														                        }
-														                    }
-														                }'>
+																					                    "loop": true,
+																					                    "autoplay": true,
+																					                    "margin": 30,
+																					                    "nav": false,
+																					                    "dots": true,
+																					                    "smartSpeed": 500,
+																					                    "autoplayTimeout": 10000,
+																					                    "navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
+																					                    "responsive": {
+																					                        "0": {
+																					                            "items": 1
+																					                        },
+																					                        "768": {
+																					                            "items": 2
+																					                        },
+																					                        "992": {
+																					                            "items": 2
+																					                        },
+																					                        "1200": {
+																					                            "items": 2
+																					                        }
+																					                    }
+																					                }'>
 						<!--Project Three Single Start-->
 						<div class="item">
 							<div class="project-three__single">
@@ -569,9 +579,6 @@
 			</section>
 			<!--Project Three End-->
 
-			
-
-			
 
 			<!--Brand One Start-->
 			<section class="brand-one">
@@ -587,31 +594,31 @@
 							<div class="col-xl-12">
 								<div
 									class="brand-one__carousel thm-owl__carousel owl-theme owl-carousel" data-owl-options='{
-																				                                "margin": 0,
-																				                                "smartSpeed": 700,
-																				                                "loop":true,
-																				                                "autoplay": 6000,
-																				                                "nav":false,
-																				                                "dots":false,
-																				                                "navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
-																				                                "responsive":{
-																				                                    "0":{
-																				                                        "items":1
-																				                                    },
-																				                                    "600":{
-																				                                        "items":2
-																				                                    },
-																				                                    "800":{
-																				                                        "items":3
-																				                                    },
-																				                                    "1024":{
-																				                                        "items": 4
-																				                                    },
-																				                                    "1200":{
-																				                                        "items": 5
-																				                                    }
-																				                                }
-																				                            }'>
+																														                                "margin": 0,
+																														                                "smartSpeed": 700,
+																														                                "loop":true,
+																														                                "autoplay": 6000,
+																														                                "nav":false,
+																														                                "dots":false,
+																														                                "navText": ["<span class=\"fa fa-angle-left\"></span>","<span class=\"fa fa-angle-right\"></span>"],
+																														                                "responsive":{
+																														                                    "0":{
+																														                                        "items":1
+																														                                    },
+																														                                    "600":{
+																														                                        "items":2
+																														                                    },
+																														                                    "800":{
+																														                                        "items":3
+																														                                    },
+																														                                    "1024":{
+																														                                        "items": 4
+																														                                    },
+																														                                    "1200":{
+																														                                        "items": 5
+																														                                    }
+																														                                }
+																														                            }'>
 									<!--Brand One Single-->
 									<div class="brand-one__single">
 										<div class="brand-one__img">
