--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -106,9 +106,6 @@
                                         <li>
                                             <a href="/">Home</a>
                                         </li>
-                                        <li>
-                                            <a href="about.html">About</a>
-                                        </li>
                                         <li class="dropdown">
                                             <a href="/services">Services</a>
                                             <ul class="border-top-2px">
@@ -201,7 +198,7 @@
 				</span>
 
 				<div class="logo-box">
-					<a href="index.html" aria-label="logo image"><img src="/assets/images/resources/logo-3.png" width="143" alt=""/></a>
+					<a href="index.html" aria-label="logo image"><img src="/assets/images/resources/marlier4White.png" width="143" alt=""/></a>
 				</div>
 				<!-- /.logo-box -->
 				<div class="mobile-nav__container"></div>
@@ -210,11 +207,11 @@
 				<ul class="mobile-nav__contact list-unstyled">
 					<li>
 						<i class="fa fa-envelope"></i>
-						<a href="mailto:needhelp@packageName__.com">needhelp@roofsie.com</a>
+						<a href="mailto:info.casawood@gmail.com">info.casawood@gmail.com</a>
 					</li>
 					<li>
 						<i class="fa fa-phone-alt"></i>
-						<a href="tel:666-888-0000">666 888 0000</a>
+						<a href="tel:+32 460 97 49 90">+32 460 97 49 90</a>
 					</li>
 				</ul>
 				<!-- /.mobile-nav__contact -->
@@ -296,9 +293,6 @@
 							<div class="footer-widget__column footer-widget__explore clearfix">
 								<h3 class="footer-widget__title">Explore</h3>
 								<ul class="footer-widget__explore-list list-unstyled clearfix">
-									<li>
-										<a href="about.html">About</a>
-									</li>
 									<li>
 										<a href="contact.html">Contact</a>
 									</li>
