--- a/templates/prime/index.html.twig
+++ b/templates/prime/index.html.twig
@@ -11,13 +11,6 @@
 					<div class="service-details__left">
 						<div class="service-details__category">
 							<ul class="service-details__category-list list-unstyled">
-
-								<li class="active">
-									<a href="/demoussage">Démoussage
-										<span class="fa fa-angle-right"></span>
-									</a>
-								</li>
-
 								<li>
 									<a href="modified-roofing.html">Modified roofing
 										<span class="fa fa-angle-right"></span>
@@ -95,5 +88,27 @@
 			</div>
 		</div>
 	</section>
+
+	<div class="search-popup">
+        <div class="search-popup__overlay search-toggler"></div>
+        <!-- /.search-popup__overlay -->
+        <div class="search-popup__content">
+            <form action="#">
+                <label for="search" class="sr-only">search here</label><!-- /.sr-only -->
+                <input type="text" id="search" placeholder="Search Here..." />
+                <button type="submit" aria-label="search submit" class="thm-btn">
+                    <i class="icon-magnifying-glass"></i>
+                </button>
+            </form>
+        </div>
+        <!-- /.search-popup__content -->
+    </div>
+    <!-- /.search-popup -->
+
+    <a href="#" data-target="html" class="scroll-to-target scroll-to-top"><i class="fa fa-angle-up"></i></a>
+
+    <!-- template js -->
+    <script src="assets/js/roofsie.js"></script>
+
 	<!--Service Details End-->
 {% endblock %}
