--- a/templates/photovoltaique/index.html.twig
+++ b/templates/photovoltaique/index.html.twig
@@ -43,7 +43,7 @@
 				<div class="col-xl-8 col-lg-7">
 					<div class="service-details__right">
 						<div class="service-details__img">
-							<img src="assets/images/services/couverture3.jpg" alt="">
+							<img src="assets/images/backgrounds/panneau2.jpg" alt="">
 							<div class="service-details__icon">
 								<span class="icon-joist"></span>
 							</div>
@@ -95,7 +95,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couverture1.jpg" alt="">
+											<img src="assets/images/backgrounds/panneau1.jpg" alt="" style="height:277,5px; width:370px">
 										</div>
 
 									</div>
@@ -103,7 +103,7 @@
 								<div class="col-xl-6">
 									<div class="service-details__benefits-single">
 										<div class="service-details__benefits-img">
-											<img src="assets/images/services/couverture2.jpg" alt="">
+											<img src="assets/images/backgrounds/panneau3.jpg" alt="" style="height:277,5px; width:370px">
 										</div>
 									</div>
 								</div>
