--- a/templates/admin_photo/comm.html.twig
+++ b/templates/admin_photo/comm.html.twig
@@ -1,68 +1,74 @@
 <head>
-		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>
-			{% block title %}Toiture Marlier Admin{% endblock %}
-		</title>
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
-		{% block favicons %}
-			<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
-			<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
-			<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
-			<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
-			<meta name="description" content="/Roofsie HTML 5 Template "/>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>
+		{% block title %}Toiture Marlier Admin
 		{% endblock %}
+	</title>
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet">
+	{% block favicons %}
+		<link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicons/apple-touch-icon.png"/>
+		<link rel="icon" type="image/png" sizes="32x32" href="/assets/images/favicons/favicon-32x32.png"/>
+		<link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicons/favicon-16x16.png"/>
+		<link rel="manifest" href="/assets/images/favicons/site.webmanifest"/>
+		<meta name="description" content="/Roofsie HTML 5 Template "/>
+	{% endblock %}
 
-		{{ encore_entry_link_tags('app') }}
-		{% block stylesheets %}{% endblock %}
-		{{ encore_entry_link_tags('app') }}
-	</head>
+	{{ encore_entry_link_tags('app') }}
+	{% block stylesheets %}{% endblock %}
+	{{ encore_entry_link_tags('app') }}
+</head>
 
 {% block body %}
 
-<div class="container">
-	<h1 class="my-5">Gestion des chantiers</h1>
-	<div class="table-responsive">
-		<table class="table table-hover">
-			<thead>
-				<tr>
-					<th>Id</th>
-					<th>Nom</th>
-					<th>Prénom</th>
-					<th>Ville</th>
-					<th>Commentaire</th>
-					<th>visibility</th>
-					<th class="text-center">Action</th>
-				</tr>
-			</thead>
-			  <tbody>
-                {% for comm in comms %}
-                    <tr>
-                        <td>{{ comm.id }}</td>
-                        <td>{{ comm.nom }}</td>
-                        <td>{{ comm.prenom }}</td>
-                        <td>{{ comm.ville }}</td>
-                        <td>{{ comm.texte }}</td>
-                        <td>{{ comm.note }}</td>
-                        <td>{{ comm.visibility ? 'Visible' : 'Caché' }}</td>
-                        <td class="text-center">
-                            <div class="btn-group" role="group">
-                                <a href="{{ path('app_admin_comm_toggle_visibility', {id: comm.id}) }}" class="btn btn-warning">
-                                    {{ comm.visibility ? 'Cacher' : 'Rendre visible' }}
-                                </a>
-                                <form action="{{ path('app_admin_comm_delete', {id: comm.id}) }}" method="post" style="display:inline-block;">
-                                    <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comm.id) }}">
-                                    <button type="submit" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce commentaire ?');">
-                                        <i class="fas fa-trash"></i>
-                                    </button>
-                                </form>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    </div>
-</div>
-<script src="https://kit.fontawesome.com/61eae04d09.js" crossorigin="anonymous"></script>
+	<div class="container">
+		<h1 class="my-5">Gestion des chantiers</h1>
+		<div class="table-responsive">
+			<table class="table table-hover">
+				<thead>
+					<tr>
+						<th>Id</th>
+						<th>Nom</th>
+						<th>Prénom</th>
+						<th>Ville</th>
+						<th>Note</th>
+						<th>Commentaire</th>
+						<th>visibilité</th>
+						<th class="text-center">Action</th>
+					</tr>
+				</thead>
+				<tbody>
+					{% for comm in comms %}
+						<tr>
+							<td>{{ comm.id }}</td>
+							<td>{{ comm.nom }}</td>
+							<td>{{ comm.prenom }}</td>
+							<td>{{ comm.ville }}</td>
+							<td>{{ comm.texte }}</td>
+							<td>{{ comm.note }}</td>
+							<td>{{ comm.visibility ? 'Visible' : 'Caché' }}</td>
+							<td class="text-center">
+								<div class="btn-group" role="group">
+									<a href="{{ path('app_admin_comm_toggle_visibility', {id: comm.id}) }}" class="btn btn-warning" style="height: 100%">
+										{% if comm.visibility %}
+											<i class="fa-solid fa-eye-slash"></i>
+										{% else %}
+											<i class="fa-solid fa-eye"></i>
+										{% endif %}
+									</a>
+									<form action="{{ path('app_admin_comm_delete', {id: comm.id}) }}" method="post" style="display:inline-block;">
+										<input type="hidden" name="_token" value="{{ csrf_token('delete' ~ comm.id) }}">
+										<button type="submit" class="btn btn-danger" onclick="return confirm('Êtes-vous sûr de vouloir supprimer ce commentaire ?');">
+											<i class="fas fa-trash"></i>
+										</button>
+									</form>
+								</div>
+							</td>
+						</tr>
+					{% endfor %}
+				</tbody>
+			</table>
+		</div>
+	</div>
+	<script src="https://kit.fontawesome.com/61eae04d09.js" crossorigin="anonymous"></script>
 {% endblock %}
