--- a/templates/admin_photo/index.html.twig
+++ b/templates/admin_photo/index.html.twig
@@ -50,9 +50,9 @@
                         </td>
                         <td class="text-center">
                             <div class="btn-group" role="group">
-                                <a href="" class="btn btn-warning">
-                                    <i class="fa-solid fa-lock"></i>
-                                </a>
+                                 <a href="{{ path('app_admin_photo_edit', {'id': chantier.id}) }}" class="btn btn-primary">
+            <i class="fa-solid fa-edit"></i> Modifier
+        </a>
                                 <form method="post" action="{{ path('app_admin_photo_delete', {'id': chantier.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir supprimer ce chantier ?');">
                             <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ chantier.id) }}">
                             <button class="btn">Supprimer</button>
