--- a/templates/homepage/index.html.twig
+++ b/templates/homepage/index.html.twig
@@ -46,12 +46,12 @@
 								<div class="row">
 									<div class="col-xl-12">
 										<div class="main-slider-three__content">
-											<h2 class="main-slider-three__title">Roof installation
+											<h2 class="main-slider-three__title">Bienvenue chez
 												<br>
-												services in your city</h2>
-											<p class="main-slider-three__text">We provide a variety of roofing and maintenance services for
+												Toiture Marlier</h2>
+											<p class="main-slider-three__text">Votre expert en 
 												<br>
-												all type of house makes happy.</p>
+												couverture, charpente, étanchéité de toiture plate, isolation et désamiantage</p>
 											<div class="main-slider-three__btn-box" style="display: none">
 												<a href="#" class="thm-btn main-slider-three__btn">
 													<i class="fa fa-arrow-right"></i>
